--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
                 <li><a href="#">About Us</a></li>
                 <li><a href="#section-three">Contacts</a></li>
                 <li><a href="#">Categories</a></li>
-                <li><a href="#">Login</a></li>
                 <li><a href="#">Profile</a></li>
             </ul>
+            <div>
+                <ul class="nav-ul">
+                    <li><a href="Sign-in-singn-up/index.html">Login</a></li>
+                </ul>
+            </div>
         </div>
     </header>
     <!----------------------------------------------- section section-one ----------------------------------------------------->
@@ -104,7 +108,7 @@
                             <img src="images/twitter_4494477.png" alt="">
                             <p>Get the latest in education and innovation from AICTE on Twitter. Follow us today!</p>
                         </div>
-                        <div class="information-twitter">
+                        <div class="information-playstore">
                             <img src="images/playstore_270011.png" alt="">
                             <p>Discover AICTE's educational resources on our Play Store app. Download it now and enhance your learning experience!</p>
                         </div>
